# reposerver/repository/repository.go
@@ -52,7 +52,7 @@ type Service struct {
 	parallelismLimitSemaphore *semaphore.Weighted
 	metricsServer             *metrics.MetricsServer
 	newGitClient              func(rawRepoURL string, creds git.Creds, insecure bool, enableLfs bool) (git.Client, error)
-	newHelmClient             func(repoType string, repoURL string, creds helm.Creds) helm.Client
+	newHelmClient             func(repoURL string, creds helm.Creds, repoType string) helm.Client
 }
 
 // NewService returns a new instance of the Manifest service
@@ -68,8 +68,8 @@ func NewService(metricsServer *metrics.MetricsServer, cache *reposervercache.Cac
 		cache:                     cache,
 		metricsServer:             metricsServer,
 		newGitClient:              git.NewClient,
-		newHelmClient: func(repoType string, repoURL string, creds helm.Creds) helm.Client {
-			return helm.NewClientWithLock(repoType, repoURL, creds, repoLock)
+		newHelmClient: func(repoURL string, creds helm.Creds, repoType string) helm.Client {
+			return helm.NewClientWithLock(repoURL, creds, repoLock, repoType)
 		},
 	}
 }
@@ -162,12 +162,12 @@ func (s *Service) runRepoOperation(
 			return err
 		}
 		if settings.noCache {
-			err = helmClient.CleanChartCache(source.Chart, version)
+			err = helmClient.CleanChartCache(source.RepoNamespace, source.Chart, version)
 			if err != nil {
 				return err
 			}
 		}
-		chartPath, closer, err := helmClient.ExtractChart(source.Chart, version)
+		chartPath, closer, err := helmClient.ExtractChart(source.RepoNamespace, source.Chart, version)
 		if err != nil {
 			return err
 		}
@@ -891,7 +891,7 @@ func (s *Service) newClientResolveRevision(repo *v1alpha1.Repository, revision s
 }
 
 func (s *Service) newHelmClientResolveRevision(repo *v1alpha1.Repository, revision string, chart string) (helm.Client, string, error) {
-	helmClient := s.newHelmClient(repo.Type, repo.Repo, repo.GetHelmCreds())
+	helmClient := s.newHelmClient(repo.Repo, repo.GetHelmCreds(), repo.Type)
 	if helm.IsVersion(revision) {
 		return helmClient, revision, nil
 	}
@@ -933,7 +933,7 @@ func checkoutRevision(gitClient git.Client, commitSHA string) (string, error) {
 }
 
 func (s *Service) GetHelmCharts(ctx context.Context, q *apiclient.HelmChartsRequest) (*apiclient.HelmChartsResponse, error) {
-	index, err := s.newHelmClient(q.Repo.Type, q.Repo.Repo, q.Repo.GetHelmCreds()).GetIndex()
+	index, err := s.newHelmClient(q.Repo.Repo, q.Repo.GetHelmCreds(), q.Repo.Type).GetIndex()
 	if err != nil {
 		return nil, err
 	}
